# ochess

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc.toml  Dockerfile  Dockerfile.prod  Makefile  README.md  alembic.ini  docker-compose.yml  example.env  package-lock.json  package.json  pyproject.toml  pytest.ini  start  start-dev
app/: chess_service.py  config.py  constants.py  environment.py  exception.py  lifespan.py  logging.py  main.py  middleware.py  resources.py  routes.py  schemas.py  validation.py  views.py
app/database/: database.py  models.py  service.py
app/websocket/: client.py  dispatch.py  endpoint.py  game.py  lobby.py  websocket.py
migrations/: env.py
migrations/versions/: 2023_07_11_1837-51e985792226_.py  2024_01_26_1542-4b359d1a6081_.py  2024_01_26_1621-d0cd6e75eea2_.py  2024_01_26_2018-7bc868202332_.py  2024_01_27_2207-6cecc26d229f_.py  2024_01_28_1541-8e7e285d2f10_.py  2024_01_30_2321-b95d3bdcaccf_.py
static/: chessground.css  chessground.min.js  client.js  game.js  lobby.js  style.css  user.js
templates/: about.html  base.html  game.html  index.html  lobby.html  players.html  watch.html
tests/: conftest.py  test_api.py  test_database.py  test_db_services.py
ui/: About.js  Game.js  Lobby.js  Navbar.js  Watch.js  client.js  index.js  user.js
