[project]
name = "ochess"
version = "2.0.0"
description = ""
authors = [
    { name = "immanelg" },
]
dependencies = [
    "asyncpg",
    "sqlalchemy",
    "broadcaster",
    "jinja2",
    "pydantic",
    "alembic",
    "uvicorn[standard]",
    "starlette",
    "itsdangerous",
    "chess",
]
requires-python = ">=3.10,<3.12"
license = {text = "GPL-3.0"}

[tool.setuptools]
py-modules = []

[tool.pdm.scripts]
serve-dev = "uvicorn app.main:app --reload --host 127.0.0.1 --port 8000 {args}"
migrate-db = "alembic revision --autogenerate {args}"
downgrade-db = "alembic downgrade {args}"
upgrade-db = "alembic upgrade head"
fmt.composite = ["black app/", "ruff app/ --fix"]
lint = "ruff check app/"
test = "pytest tests/"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-env>=0.8.2",
    "pytest-asyncio>=0.21.0",
    "async-asgi-testclient>=1.4.11",
]
lint = [
    "ruff>=0.0.275",
    "black>=23.3.0",
]

[tool.ruff]
select = [
    "E",  
    "W",  
    "F",  
    "I",  
]

[tool.pyright]
exclude =  [ ".venv" ]
venvPath = "."
venv = ".venv"
