[project]
name = "ochess"
version = "2.0.0"
description = ""
authors = [
    { name = "immanelg" },
]
dependencies = [
    "asyncpg",
    "sqlalchemy",
    "broadcaster",
    "jinja2",
    "pydantic",
    "alembic",
    "uvicorn[standard]",
    "starlette",
    "itsdangerous",
    "chess",
]
requires-python = ">=3.10,<3.12"
license = {text = "GPL-3.0"}

[tool.setuptools]
py-modules = []

[tool.pdm.scripts]
serve-dev = "uvicorn app.main:app --reload --host 127.0.0.1 --port 8000 {args}"
db-migration = "alembic revision --autogenerate {args}"
db-upgrade = "alembic upgrade head"
db-downgrade = "alembic downgrade {args}"
lint = "ruff check app/ --fix"
check = "ruff check app/"
fmt = ["ruff format app/ tests/"]
test = "pytest tests/"

[tool.pdm.dev-dependencies]
test = [
    "pytest",
    "pytest-env",
    "pytest-asyncio",
    "async-asgi-testclient",
]
lint = [
    "ruff",
    "black",
]

[tool.ruff]
select = [
    "E",  
    "W",  
    "F",  
    "I",  
]

[tool.pyright]
exclude =  [ ".venv" ]
venvPath = "."
venv = ".venv"
