[project]
name = "ochess"
version = "2.0.0"
description = ""
authors = [
    { name = "immanelg" },
]
dependencies = [
    "asyncpg",
    "sqlalchemy",
    "broadcaster",
    "jinja2",
    "pydantic",
    "alembic",
    "uvicorn[standard]",
    "starlette",
    "itsdangerous",
    "chess",
    "pydantic-settings",
]
requires-python = ">=3.11,<3.12"
license = {text = "GPL-3.0"}

[tool.setuptools]
py-modules = []

[tool.pdm.dev-dependencies]
test = [
    "pytest",
    "pytest-env",
    "pytest-asyncio",
    "async-asgi-testclient",
]
lint = [
	"pre-commit",
    "ruff",
]

[tool.ruff]
select = [
    "E",  
    "W",  
    "F",  
    "I",  
]

[tool.pyright]
exclude =  [ ".venv" ]
venvPath = "."
venv = ".venv"
